<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnTertiary"
    tools:context="pl.plantoplate.ui.main.settings.group_code_generation.GroupCodeTypeActivity">

<!--    <TextView-->
<!--        android:layout_marginTop="70dp"-->
<!--        android:id="@+id/plantoplate"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:fontFamily="@font/quicksand_semibold"-->
<!--        android:gravity="top"-->
<!--        android:text="@string/plantoplate"-->
<!--        android:textAppearance="@style/plantoplate"-->
<!--        android:textColor="?attr/colorSecondaryVariant"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.023" />-->

    <ImageView
        android:id="@+id/question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_question_mark_24"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/code_generation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"

        android:textSize="22dp"

        android:fontFamily="@font/quicksand_regular"
        android:gravity="top"

        android:text="@string/wygenerowanie_kodu"
        android:textAppearance="@style/pomy_lnie_z"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/choose_an_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        android:layout_marginTop="70dp"
        android:fontFamily="@font/quicksand_regular"

        android:gravity="center_horizontal|top"
        android:text="@string/wybierz_opcje"
        android:textAppearance="@style/wprowad_kod"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_generation"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/code_for_adult"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dp"

        android:layout_marginBottom="300dp"

        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/kod_dla_osoby_doroslej"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        app:iconPadding="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_an_option"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/code_for_child"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"

        android:layout_marginBottom="150dp"

        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/kod_dla_dziecka"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        app:iconPadding="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_for_adult"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/uwaga"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"

        android:layout_marginTop="40dp"
        android:fontFamily="@font/quicksand_regular"

        android:gravity="top"
        android:text="@string/uwaga"
        android:textAppearance="@style/uwaga_do_cz"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_for_child"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
