<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id = "@+id/calendar"
        android:title="@string/kalendarz"
        android:icon="@drawable/selector_calendar"

        android:font="@font/quicksand_regular"
        android:fontFamily="@font/quicksand_regular"

        android:iconTint="?attr/colorSecondaryVariant"
        />
    <item
        android:id = "@+id/cottage"
        android:title="@string/spizarnia"
        android:icon="@drawable/selector_cottage"

        android:font="@font/quicksand_regular"
        android:fontFamily="@font/quicksand_regular"

        android:iconTint="?attr/colorSecondaryVariant"
        />
    <item
        android:id = "@+id/shopping_cart"
        android:title="@string/lista_zakupow"
        android:icon="@drawable/selector_shopping"

        android:font="@font/quicksand_regular"
        android:fontFamily="@font/quicksand_regular"

        android:iconTint="?attr/colorSecondaryVariant"
        />
    <item
        android:id = "@+id/receipt_long"
        android:title="@string/przepisy"
        android:icon="@drawable/selector_receipt"


        android:font="@font/quicksand_regular"
        android:fontFamily="@font/quicksand_regular"

        android:iconTint="?attr/colorSecondaryVariant"
        />
    <item
        android:id = "@+id/settings"
        android:title="@string/ustawienia"
        android:icon="@drawable/selector_settings"

        android:font="@font/quicksand_regular"
        android:fontFamily="@font/quicksand_regular"

        android:iconTint="?attr/colorSecondaryVariant"
        />

</menu>