...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forward_the_code"
        app:layout_constraintVertical_bias="0.209">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kod"
            android:layout_width="236dp"
            android:layout_height="56dp"

            android:fontFamily="@font/quicksand_regular"

            android:singleLine="true"
...
