...
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_wygenerowanie_kodu"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"
        android:drawableLeft="@drawable/shopping_cart_outlined_24_50"
        android:fontFamily="@font/quicksand_medium"
...
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />



    <Button
        android:id="@+id/button_about_us"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"
        android:drawableLeft="@drawable/receipt_long_outline_24_50"
        android:fontFamily="@font/quicksand_medium"
...
