...
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnTertiary">

    <TextView
        android:id="@+id/dev_text"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dev_text"
        app:layout_constraintVertical_bias="0.002" />

    <Button
        android:id="@+id/button_zatwierdz"
        android:layout_width="236dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"


        android:layout_alignParentTop="true"
...
